# feu

./: README.md  environment.yml
bigrams/: Bigrams.ipynb  names.json
classifier/: .gitignore  README.md  pyproject.toml
classifier/classifier/: model.py
classifier/src/: model.py
gan/: .gitignore  README.md  classifier.py  debug.py  discriminator.py  generator.py  mnist_gan.py  rescale.py  squeeze.py  train_gan.py  util.py
gan/util/: torch_utils.py
gan/util/layers/: rescale.py  squeeze.py
mnist/: MNIST.ipynb  inc.ipynb
mnist/gan/: README.md  classifier.py  debug.py  discriminator.py  generator.py  mnist_gan.py  util.py
rnn/client/: .gitignore  package.json  tsconfig.json  webpack.config.js
rnn/client/public/: test.html
rnn/client/src/: agent.ts  bug.ts  index.ts  renderer.ts  world.ts
rnn/proto/: test.proto
rnn/server/: .gitignore  test.py
