[project]
name = "classifier"
version = "0.1.0"
description = ""
authors = [{ name = "rgerd", email = "rgerdisch@gmail.com" }]
dependencies = [
    "lightning>=2.1.2",
    "torchvision>=0.16.1",
    "tensorboard>=2.15.1",
    "matplotlib>=3.8.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.7.1",
    "flake8>=6.1.0",
    "black>=23.11.0",
    "torch-tb-profiler>=0.4.3",
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120
profile = "black"
src_paths = "*"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["f", "i"]
notes = ["FIXME"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
]

[tool.pylint.reports]
output-format = "colorized"
